# aho-client

./: .gitignore  README.md  app.config.ts  biome.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
.github/.workflow/: main.yml  node-ci.yml
api/: tracker.js
src/: app.tsx  entry-client.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: discovery.rs  lib.rs  main.rs  peer_server.rs
src/components/: CenterVideo.tsx  ChatLog.tsx  CodeView.jsx  ConnectionIndicator.tsx  ListenerCircle.tsx  Loading.tsx  OnlinePeers.tsx  Resizer.tsx  TalkingCircle.tsx  TopControls.tsx
src/components/Chat/: BurgerButton.tsx  ChatInput.tsx  ChatLog.tsx  MessageList.tsx  PeerSelector.tsx  Sidebar.tsx  TopControls.tsx
src/context/: contacts.tsx  messages.tsx  network.tsx
src/lib/: crossPrompt.ts  getMyStream.ts
src/namegen/: username.js
src/styles/: BurgerButton.module.css  CenterVideo.module.css  ChatInput.module.css  ChatLog.module.css  ConnectionIndicator.module.css  Loading.module.css  MessageList.module.css  Modal.module.css  OnlinePeers.module.css  PeerSelector.module.css  Resizer.module.css  Sidebar.module.css  TalkingCircle.module.css  TopControls.module.css  variables.css
