[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
futures-util = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
uuid = { version = "1.11.0", features = ["v4"] }

